@@ -159,6 +159,12 @@ Default is 0, meaning there is no maximum .
 .B tcp\-timeout:\fR <number>
 Overrides the default TCP timeout . 
 .TP
+.B ipv4\-edns\-size:\fR <number>
+Preferred EDNS buffer size for IPv4 . 
+.TP
+.B ipv6\-edns\-size:\fR <number>
+Preferred EDNS buffer size for IPv6 . 
+.TP
 .B pidfile:\fR <filename>
 Use the pid file instead of the platform specific default, usually 
 .IR /var/run/nsd.pid. 
